# KappaTools

./: Makefile  README.md  dune-project  kappa-agents.opam  kappa-binaries.opam  kappa-server.opam  kappa-webapp.opam  playwright.config.ts
.github/workflows/: ci.yml
core/KaSa_rep/frontend/: prepreprocess.ml
core/dataStructures/: loc.ml  loc.mli
core/grammar/: ast.ml  ast.mli  counters_compiler.ml  kappaParser.mly  klexer4.mll  kparser4.mly  lKappa_compiler.ml
core/main/: KaStateVar.ml  dune
core/term/: lKappa.ml  lKappa.mli
dev/: update-web.sh
gui/: state_project.ml  state_project.mli  state_runtime.ml  tab_constraints.ml  tab_contact_map.ml  tab_editor.ml  tab_influences.ml  tab_polymers.ml
gui/entry_point/: main.js
gui/viz/: common.js
tests/playwright/: procedure.spec.ts  project_electron_param.ts
viz/: JsSim.css  plot.js
