(executable
 (name KaSim)
 (libraries
  lwt.unix
  fmt
  num
  yojson
  kappa-library.generic
  kappa-library.mixtures
  kappa-library.terms
  kappa-library.runtime
  kappa_version
  kappa_grammar
  kappa_cli)
 (public_name KaSim)
 (package kappa-binaries)
 (flags
  (:standard
   -w
   @a-40-42
   -open
   Kappa_version
   -open
   Kappa_data_structures
   -open
   Kappa_site_graphs
   -open
   Kappa_terms
   -open
   Kappa_runtime
   -open
   Kappa_grammar
   -open
   Kappa_cli)))

 (executable
   (name KaStateVar)
   (public_name KaStateVar)   
   (package kappa-binaries)
   (libraries      
      kappa_grammar
   )
   (preprocess (pps ppx_sexp_conv ppx_compare))
   )

